--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emotional Intelligence Quiz</title>
+    <title>Emotional Intelligence Quiz for Leaders</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 20px; }
         .question { margin-bottom: 15px; }
@@ -11,44 +11,86 @@
     </style>
 </head>
 <body>
-    <h1>Emotional Intelligence Quiz</h1>
+    <h1>Emotional Intelligence Quiz for Leaders</h1>
+    <p><strong>Instructions:</strong> Rate yourself on a scale of 1 to 5 for each statement. Be honest—this is for self-awareness!</p>
+    
     <div id="quiz"></div>
     <button onclick="calculateScore()">Submit</button>
     <div id="result" class="result"></div>
 
     <script>
-        const questions = [
-            "I recognize my emotions as they happen.",
-            "I understand how my emotions affect my decisions and behavior.",
-            "I can describe what triggers my stress, frustration, or anxiety.",
-            "I remain calm and composed under pressure.",
-            "I handle workplace conflicts with emotional intelligence and fairness."
-        ];
+        const sections = {
+            "Self-Awareness": [
+                "I recognize my emotions as they happen.",
+                "I understand how my emotions affect my decisions and behavior.",
+                "I can describe what triggers my stress, frustration, or anxiety.",
+                "I am aware of how my emotions impact others.",
+                "I take time to reflect on my emotional responses to situations."
+            ],
+            "Self-Regulation": [
+                "I remain calm and composed under pressure.",
+                "I can adapt my emotions and reactions to different situations.",
+                "I manage impulsive reactions and avoid saying things I regret.",
+                "I practice techniques (e.g., breathing, pausing) to manage stress.",
+                "I take responsibility for my emotions and actions rather than blaming others."
+            ],
+            "Motivation": [
+                "I stay positive and focused, even in challenging situations.",
+                "I set personal and professional goals and work steadily toward them.",
+                "I use setbacks as learning experiences rather than getting discouraged.",
+                "I am driven by purpose and passion rather than external rewards alone.",
+                "I demonstrate resilience and perseverance in my leadership role."
+            ],
+            "Empathy": [
+                "I actively listen to others without interrupting or judging.",
+                "I try to understand others’ perspectives, even if I disagree.",
+                "I notice and acknowledge the emotions of team members.",
+                "I respond with compassion when someone is struggling.",
+                "I adjust my communication style based on the emotions of those I’m speaking with."
+            ],
+            "Social Skills & Relationship Management": [
+                "I can navigate difficult conversations with diplomacy and tact.",
+                "I handle workplace conflicts with emotional intelligence and fairness.",
+                "I build strong, trusting relationships with my team and colleagues.",
+                "I inspire and motivate others through positive interactions.",
+                "I create an environment where others feel comfortable expressing their emotions."
+            ]
+        };
 
         const quizContainer = document.getElementById("quiz");
-        questions.forEach((question, index) => {
-            const div = document.createElement("div");
-            div.classList.add("question");
-            div.innerHTML = `<p>${question}</p>
-                <select id="q${index}">
-                    <option value="1">1 - Strongly Disagree</option>
-                    <option value="2">2 - Disagree</option>
-                    <option value="3" selected>3 - Neutral</option>
-                    <option value="4">4 - Agree</option>
-                    <option value="5">5 - Strongly Agree</option>
-                </select>`;
-            quizContainer.appendChild(div);
-        });
+        let questionIndex = 0;
+        
+        for (const [section, questions] of Object.entries(sections)) {
+            const sectionTitle = document.createElement("h2");
+            sectionTitle.innerText = section;
+            quizContainer.appendChild(sectionTitle);
+
+            questions.forEach(question => {
+                const div = document.createElement("div");
+                div.classList.add("question");
+                div.innerHTML = `<p>${question}</p>
+                    <select id="q${questionIndex}">
+                        <option value="1">1 - Strongly Disagree</option>
+                        <option value="2">2 - Disagree</option>
+                        <option value="3" selected>3 - Neutral</option>
+                        <option value="4">4 - Agree</option>
+                        <option value="5">5 - Strongly Agree</option>
+                    </select>`;
+                quizContainer.appendChild(div);
+                questionIndex++;
+            });
+        }
 
         function calculateScore() {
             let score = 0;
-            for (let i = 0; i < questions.length; i++) {
+            for (let i = 0; i < questionIndex; i++) {
                 score += parseInt(document.getElementById(`q${i}`).value);
             }
             let feedback = "";
-            if (score >= 20) feedback = "High Emotional Intelligence";
-            else if (score >= 15) feedback = "Moderate Emotional Intelligence";
-            else feedback = "Low Emotional Intelligence";
+            if (score >= 100) feedback = "High Emotional Intelligence – You are highly self-aware, empathetic, and emotionally skilled in leadership.";
+            else if (score >= 75) feedback = "Strong Emotional Intelligence – You demonstrate EI but have some areas for growth.";
+            else if (score >= 50) feedback = "Moderate Emotional Intelligence – You are developing EI skills but may need to refine certain areas.";
+            else feedback = "Low Emotional Intelligence – You may struggle with recognizing or managing emotions effectively.";
             document.getElementById("result").innerText = `Your Score: ${score}\n${feedback}`;
         }
     </script>
