--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <h1>Emotional Intelligence Quiz for Leaders</h1>
+    <h1>Emotional Intelligence Assessment for Leaders</h1>
     <p><strong>Instructions:</strong> Rate yourself on a scale of 1 to 5 for each statement. Be honest—this is for self-awareness!</p>
     
     <div id="quiz"></div>
@@ -72,7 +72,7 @@
                     <select id="q${questionIndex}">
                         <option value="1">1 - Strongly Disagree</option>
                         <option value="2">2 - Disagree</option>
-                        <option value="3" selected>3 - Neutral</option>
+                        <option value="3" selected>3 - Somewhat Agree or Disagree</option>
                         <option value="4">4 - Agree</option>
                         <option value="5">5 - Strongly Agree</option>
                     </select>`;
